--- a/style.css
+++ b/style.css
@@ -7,22 +7,39 @@
 
 body {
   height: 100vh;
+  background-color: white;
 }
-
-main {
-  margin: 1em;
-  padding: 1em;
+.container {
   border: 2px solid;
+  margin: 1em;
   height: 70vw;
+  z-index: 10;
+  overflow: hidden;
+}
+main {
+  height: 70vw;
+  padding: 3px;
   display: flex;
   justify-content: space-around;
-  gap: 1em;
+  position: relative;
 }
 
 .square {
-  border: 2px solid red;
+  margin: 1px;
   background-color: peachpuff;
   width: calc(100% / 2);
+  position: relative;
+  bottom: 250%;
+  height: 170%;
+}
+
+.square:nth-child(1) {
+  background-color: rgb(223, 170, 124);
+}
+
+.tilted {
+  z-index: -10;
+  transform: rotateZ(-30deg) scale(1.3);
 }
 
 .extra {
